# IMA_App

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: AppManager.cpp  AppManager.h  CMakeLists.txt  main.cpp
src/AssetsTab/: AssetsFactory.cpp  AssetsFactory.h  AssetsManager.h  CMakeLists.txt
src/ForexTab/: CMakeLists.txt  ForexFactory.cpp  ForexFactory.h  ForexManager.cpp  ForexManager.h
src/ForexTab/ForexCore/: CMakeLists.txt  EconomicEvent.cpp  EconomicEvent.h  ForexCard.cpp  ForexCard.h  ForexStorage.cpp  ForexStorage.h  ForexStorageService.cpp  ForexStorageService.h
src/ForexTab/ForexView/: CMakeLists.txt  ForexCardDataModel.cpp  ForexCardDataModel.h  ForexModelView.cpp  ForexModelView.h
src/PhaseTab/: CMakeLists.txt  PhaseFactory.cpp  PhaseFactory.h  PhaseManager.cpp  PhaseManager.h
src/common/: AbstractIMAFactory.h  CMakeLists.txt  IMAModelView.h  IMA_Events.h  IMA_types.h
src/ui/: app-window.slint  header-tile.slint
src/ui/assets-tab/: assets-block1.slint  assets-block3.slint  assets-block4.slint  assets-block5.slint  assets-tab.slint
src/ui/forex-tab/: forex-card-presenter.slint  forex_analysis_card.slint  forex_economic_event.slint
src/ui/phase-tab/: phase-tab.slint
ui/: tabview.slint
ui/assets-tab/: assets-block2.slint  assets-block6.slint  weekly_asset_scan_blocks.slint
ui/forex-tab/: forex-tab.slint  forex_types.slint
